# hCRF-light

./: LICENSE.md  Makefile  Makefile.config  README.md  compile.sh  experimentHCNF.m
apps/: hCRF.sln
apps/matHCRF/: ReadMe.txt  matHCRF.vcproj
apps/testModel/: main.cpp  testModel.vcproj
data/natops/: download_natops24.sh  download_natops6.sh
data/outlier/: genSynData.m
data/toy/: dataAnomalyTest.csv  dataAnomalyTrain.csv  dataTest.csv  labelsAnomalyTest.csv  labelsAnomalyTrain.csv  seqLabelsTest.csv
include/hcrf/: dataset.h  evaluator.h  featuregenerator.h  features.h  gradient.h  hCRF.h  hcrfExcep.h  hierarchicalFeatures.h  inferenceengine.h  matrix.h  model.h  multiviewFeatures.h  optimizer.h  segment.h  toolbox.h
lib/liblbfgs/: README  configure.in  lbfgs.sln
libs/shared/hCRF/: CMakeLists.txt  hCRF.project  hCRF.vcproj  hCRF_p.vcproj
libs/shared/hCRF/include/: Features.h  HierarchicalFeatures.h  MultiviewFeatures.h  dataset.h  evaluator.h  featuregenerator.h  gradient.h  hCRF.h  hcrfExcep.h  inferenceengine.h  matrix.h  model.h  optimizer.h  segment.h  toolbox.h
libs/shared/hCRF/src/: Features.cpp  GradientCRF.cpp  GradientHCRF.cpp  GradientHSSHCRF.cpp  GradientLDCRF.cpp  GradientMVHCRF.cpp  GradientMVLDCRF.cpp  HierarchicalFeatures.cpp  InferenceEngine.cpp  InferenceEngineBP.cpp  InferenceEngineFB.cpp  InferenceEngineJT.cpp  InferenceEngineLoopyBP.cpp  MultiviewFeatures.cpp  OptimizerLBFGS.cpp  OptimizerNRBM.cpp  Segment.cpp  ToolboxCRF.cpp  ToolboxHCRF.cpp  ToolboxHSSHCRF.cpp  ToolboxLDCRF.cpp  ToolboxMVHCRF.cpp  ToolboxMVLDCRF.cpp  dataset.cpp  evaluator.cpp  evaluatorCRF.cpp  evaluatorHCRF.cpp  evaluatorHSSHCRF.cpp  evaluatorLDCRF.cpp  evaluatorMVHCRF.cpp  evaluatorMVLDCRF.cpp  featuregenerator.cpp  gradient.cpp  matrix.cpp  matrix.inl  matrixSSE2.cpp  model.cpp  optimizer.cpp  toolbox.cpp
matlab/: compile.m  experimentHCNF.m  experimentHCRF.m  experimentHSSHCRF.m  experimentLHCRF.m  experimentOCHCRF.m  genSyntheticAnomalyData.m  test.m  test_oc.m
src/app/: hcrf-light.cpp
src/hcrf/: dataset.cpp  evaluator.cpp  evaluatorCRF.cpp  evaluatorHCRF.cpp  evaluatorHSSHCRF.cpp  evaluatorLDCRF.cpp  evaluatorMVHCRF.cpp  evaluatorMVLDCRF.cpp  evaluatorOCCRF.cpp  features.cpp  (+34 more)
toydata/: ArmGesture.mat
(+16 files in other folders)
